Always show vertical scrollbar to avoid horizontal layout jumps

--- a/docs/_sass/color_schemes/custom.scss
+++ b/docs/_sass/color_schemes/custom.scss
@@ -1,3 +1,4 @@
+html { overflow-y: scroll; }
 $link-color: $blue-100;
 .required { color: $red-300; }
 .site-logo { width: 30% !important; }
